test/types/tuple/vass/assignment-1-error.good
assignment-1-error.chpl:6: In function 'test':
assignment-1-error.chpl:7: error: cannot assign to const variable
